--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "photoholmes"
 version = "0.0.1"
 requires-python = ">=3.10"
 license = { file = "LICENSE" }
+readme = "README.md"
 dependencies = [
     "numpy",
     "matplotlib",
